--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -20,3 +20,9 @@ fos_user_resetting:
 fos_user_change_password:
     resource: "@FOSUserBundle/Resources/config/routing/change_password.xml"
     prefix: /profile
+
+app_api:
+    resource: "@AppBundle/Controller/ApiController.php"
+    type: rest
+    prefix: /api
+    defaults: {_format: json}
