--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -26,3 +26,9 @@ app_api:
     type: rest
     prefix: /api
     defaults: {_format: json}
+
+fos_oauth_server_token:
+    resource: "@FOSOAuthServerBundle/Resources/config/routing/token.xml"
+
+fos_oauth_server_authorize:
+    resource: "@FOSOAuthServerBundle/Resources/config/routing/authorize.xml"
